--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 beautifulsoup4==4.12.3
 greenlet==3.0.3
-numpy==2.1.1
+numpy
 pandas==2.2.3
 playwright==1.47.0
 pyee==12.0.0
@@ -11,3 +11,6 @@ six==1.16.0
 soupsieve==2.6
 typing_extensions==4.12.2
 tzdata==2024.2
+
+wget~=3.2
+selenium~=4.25.0
